--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,8 @@
 #mostra_immagine{
-    
     margin: 0 auto;
     display: flex;
-    width: 300px;
-    height: 300px;
+    width: 200px;
+    height: 200px;
     object-fit: cover;
     margin-top: 50px;
 }
@@ -14,13 +13,13 @@ mark{
     box-shadow: 0px 0px 10px rgb(116, 221, 113);
     border-radius: 7px;
     padding:3px;
-    font-size: 40px;
+    font-size: 35px;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 @keyframes glow {
     from{
-      text-shadow: 0 0 10px rgb(116, 221, 113);
+      text-shadow: 0 0 5px rgb(116, 221, 113);
     }
     to {
       text-shadow: 0 0 25px rgb(116, 221, 113);
@@ -29,7 +28,7 @@ mark{
   }
 
 #span_titolo{
-    font-size: 40px;
+    font-size: 35px;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color:rgb(255, 255, 255);
 }
@@ -39,11 +38,19 @@ html{
 }
 
 hr{
+    margin-top: 20px;
     width: 300px;
     height: 1px;
     margin: none;
     background-color: white;
     border-radius: 100px;
+}
+
+html{
+    background-image: radial-gradient(#74dd71 1.5px, transparent 1.5px), radial-gradient(#74dd71 1.5px, transparent 1.5px);
+    background-size: 62px 62px;
+    background-position: 0 0, 31px 31px;
+    background-color: #202020;
 }
 
 #corpo{
@@ -71,21 +78,36 @@ hr{
     box-shadow: 0px 0px 10px inset rgb(116, 221, 113);
 }
 
-#testo_perdita{
-    text-align: center;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color:rgb(240, 2, 2) !important;
-    text-shadow: 0px 0px 20px rgb(240, 2, 2) !important;
-    font-size: 30px;
-}
-
 #bottone_invio{
     opacity: 0;
 }
 
 #punti{
+    font-size: 24px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color:white;
     text-align: center;
 }
 
+#ricominciare{
+    opacity: 0%;
+    display: flex;
+    margin: 0 auto;
+    text-align:center;
+    width: 300px;
+    height: 40px;
+    border-radius: 7px;
+    border: none;
+    background-color: rgb(218, 46, 46);
+    box-shadow: 0px 0px 10px rgb(218, 46, 46);
+    font-size: 35px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color:white;
+}
+
+#icona_rotella{
+    display: flex;
+    margin: 0 auto;
+    margin-top: 7px;
+    filter: invert();
+}
