--- a/styles.css
+++ b/styles.css
@@ -7,50 +7,12 @@
     margin-top: 50px;
 }
 
-mark{
-    background:rgb(116, 221, 113);
-    animation: glow 1s ease-in-out infinite alternate;
-    box-shadow: 0px 0px 10px rgb(116, 221, 113);
-    border-radius: 7px;
-    padding:3px;
-    font-size: 35px;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
-
-@keyframes glow {
-    from{
-      text-shadow: 0 0 5px rgb(116, 221, 113);
-    }
-    to {
-      text-shadow: 0 0 25px rgb(116, 221, 113);
-    }
-  
-  }
-
-#span_titolo{
-    font-size: 35px;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color:rgb(255, 255, 255);
-}
-
 html{
-    background-color: rgb(32, 32, 32);
-}
-
-hr{
-    margin-top: 20px;
-    width: 300px;
-    height: 1px;
-    margin: none;
-    background-color: white;
-    border-radius: 100px;
-}
-
-html{
-    background-image: radial-gradient(#74dd71 1.5px, transparent 1.5px), radial-gradient(#74dd71 1.5px, transparent 1.5px);
-    background-size: 62px 62px;
-    background-position: 0 0, 31px 31px;
     background-color: #202020;
+}
+
+#titolo{
+    width: 300px;
 }
 
 #corpo{
