--- a/style_home.css
+++ b/style_home.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: "CustomFont";
+    src: url("./font/varelaround-regular-webfont.woff")format("woff");
+}
+
 #corpo{
     text-align: center;
 }
