--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: "CustomFont";
+    src: url("./font/varelaround-regular-webfont.woff")format("woff");
+}
+
 #mostra_immagine{
     margin: 0 auto;
     display: flex;
@@ -10,6 +15,8 @@
 html{
     background-color: #202020;
 }
+
+
 
 #titolo{
     width: 300px;
@@ -30,9 +37,9 @@ html{
     border: 2px solid rgb(116, 221, 113);
     transition-duration: .2s;
     color: white;
-    font-size: 35px;
+    font-size: 25px;
     text-align: center;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: "CustomFont";
 }
 
 #testo_input:focus{
@@ -46,7 +53,7 @@ html{
 
 #punti{
     font-size: 24px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: "CustomFont";
     color:white;
     text-align: center;
 }
@@ -60,16 +67,39 @@ html{
     height: 40px;
     border-radius: 7px;
     border: none;
-    background-color: rgb(218, 46, 46);
-    box-shadow: 0px 0px 10px rgb(218, 46, 46);
+    background-color: rgb(255, 255, 255);
+    border: 2px solid rgb(218, 46, 46);
+    box-shadow: 0px 5px 0px rgb(143, 9, 9);
     font-size: 35px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: "CustomFont";
     color:white;
+    transition-duration: .2s;
+}
+
+#ricominciare:focus{
+    margin-top: 5px;
+    box-shadow: 0px 0px 0px rgb(143, 9, 9);
 }
 
 #icona_rotella{
     display: flex;
     margin: 0 auto;
     margin-top: 7px;
-    filter: invert();
+}
+
+#impostazioni{
+    margin-top: 40px;
+    color:white;
+    text-align: center;
+    font-family: "CustomFont";
+}
+
+#impostazioni_generali{
+    display: flex;
+    margin:0 auto;
+}
+
+#master_volume{
+    display: flex;
+    margin:0 auto;
 }
